--- a/assets/styles/sections/footer.scss
+++ b/assets/styles/sections/footer.scss
@@ -92,7 +92,7 @@ $shop_bg_color: {{ settings.shop_bg_color }};
 }
 
 .footer__credits {
-  font-size: smaller;
+  // font-size: smaller;
 }
 
 .footer__credits p {
