--- a/assets/styles/sections/image-with-text-overlay.scss
+++ b/assets/styles/sections/image-with-text-overlay.scss
@@ -3,7 +3,7 @@
 
 $banner-font-family: {{ settings.banner_text__font.family }}, {{ settings.regular__font.fallback_families }};
 $banner-font-weight: {{ settings.banner_text__font.weight }};
-$banner-font-size: {{ settings.banner_text_size }}px;
+$banner-font-size: var(--text-sm);
 $banner-letter-spacing: {{ settings.banner_text_letter_spacing }}px;
 
 $banner-heading-font-family: {{ settings.banner_heading__font.family }}, {{ settings.regular__font.fallback_families }};
@@ -11,10 +11,6 @@ $banner-heading-font-weight: {{ settings.banner_heading__font.weight }};
 $banner-heading-style: {{ settings.banner_heading_style }};
 $banner-heading-font-size: {{ settings.banner_heading_size }}px;
 
-$banner-font-family: {{ settings.banner_text__font.family }}, {{ settings.regular__font.fallback_families }};
-$banner-font-weight: {{ settings.banner_text__font.weight }};
-$banner-spacing: {{ settings.banner_text_letter_spacing }};
-$banner-font-size: {{ settings.banner_text_size }}px;
 
 .block__image-with-overlay,
 .image-with-text-overlay,
@@ -26,10 +22,10 @@ $banner-font-size: {{ settings.banner_text_size }}px;
 
   .caption-content {
     padding: 30px;
-    min-width: 350px;
+    width: 550px;
 
     @include respond-to('small-down') {
-      min-width: auto;
+      width: auto;
     }
   }
 
