--- a/assets/styles/sections/banner.scss
+++ b/assets/styles/sections/banner.scss
@@ -45,10 +45,10 @@
 }
 
 .banner__content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  @include prefix(transform, translate(-50%, -50%), ms webkit spec);
+  // position: absolute;
+  // top: 50%;
+  // left: 50%;
+  // @include prefix(transform, translate(-50%, -50%), ms webkit spec);
   margin: auto;
   z-index: 3;
   width: 100%;
