--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -62,7 +62,7 @@ $size-2: 2.5rem !default;
 $size-3: 2rem !default;
 $size-4: 1.5rem !default;
 $size-5: 1.25rem !default;
-$size-6: 1rem !default;
+$size-6: var(--text-base-size) !default;
 $size-7: 0.75rem !default;
 $size-8: 0.5rem !default;
 
