--- a/sections/collection-subcollection__main.liquid
+++ b/sections/collection-subcollection__main.liquid
@@ -178,7 +178,7 @@
 
   {% if section.settings.show_promo_banner %}
     <div class="collection-promo-banner container">
-      <div class="banner__wrapper
+      <div class="banner__wrapper flex flex-column justify-center items-center
                   one-whole
                   column
                   dark-overlay-{{ section.settings.image_darken }}
