--- a/sections/collection__main.liquid
+++ b/sections/collection__main.liquid
@@ -71,7 +71,7 @@
 <div class="collection__main {{ css_class }}" data-collection-main>
   {% if object.settings.show_promo_banner %}
     <div class="collection-promo-banner container">
-      <div class="banner__wrapper
+      <div class="banner__wrapper flex flex-column justify-center items-center
                   one-whole
                   column
   
