--- a/assets/styles/sections/header.scss
+++ b/assets/styles/sections/header.scss
@@ -131,7 +131,7 @@ h1.header__logo-text > a {
   @include flexbox();
   @include flex-direction(column);
   @include align-items(center);
-  padding: 1rem 5px;
+  padding: 1rem var(--space-sm);
   height: 100%;
 
   &:last-child {
